# edgescribe

./: .gitignore  Makefile  README.md  api.py  article.md  deploy.sh  diarize.py  edgescribe_api.postman_collection.json  gui.py  medium_article.md  pyproject.toml  requirements.txt  setup.sh  transcribe.py
core/: audio.py  diarize.py  engine.py  format.py
presentation/: DEPLOYMENT_CLOUD_GUIDE.md  PRESENTATION_SCRIPT.md  PRESENTATION_SCRIPT_EN.md
pretrained_models/spkrec-ecapa-voxceleb/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
static/: app.js  index.html  style.css
tests/: test_api.py  test_format.py
