[project]
name = "edgescribe"
version = "1.0.0"
description = "Local audio & video transcription"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "faster-whisper>=1.2.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
diarize = [
    "simple-diarizer",
    "speechbrain>=1.0.0",
    "scikit-learn>=1.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]
test = [
    "pytest",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/mikebionic/edgescribe"
Issues = "https://github.com/mikebionic/edgescribe/issues"
